属性配置注入值

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+server.port=9090
+server.servlet.context-path=/helloworld
+# 注入properities的文件值
+book.author=zhoumunang
+book.name=少年白马醉春风
+author.name=周木楠
+author.age=23
