--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
-server.port=9090
+# profile配置，针对不同的环境对不同的配置提供支持
+spring.profiles.active=dev
+
 server.servlet.context-path=/helloworld
+server.ssl.key-store=.keystore
+#配置模板引擎(默认就是如下配置，可不填，代码可先ThymeleafProperties类)
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+# 配置日志级别
+
 # 注入properities的文件值
 book.author=zhoumunang
 book.name=少年白马醉春风
