--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,13 @@
 spring.profiles.active=dev
 
 server.servlet.context-path=/helloworld
+# ssl设置
 server.ssl.key-store=.keystore
+server.ssl.key-store-password=zpcwzy
+server.ssl.key-store-type=JKS
+server.ssl.key-alias=tomcat
+http.port=
+
 #配置模板引擎(默认就是如下配置，可不填，代码可先ThymeleafProperties类)
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
