--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,19 @@
 # profile配置，针对不同的环境对不同的配置提供支持
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 server.servlet.context-path=/helloworld
 # ssl设置
-server.ssl.key-store=.keystore
-server.ssl.key-store-password=zpcwzy
-server.ssl.key-store-type=JKS
-server.ssl.key-alias=tomcat
-http.port=
+# server.ssl.key-store=.keystore
+# server.ssl.key-store-password=zpcwzy
+# server.ssl.key-store-type=JKS
+# server.ssl.key-alias=tomcat
+http.port=8080
 
 #配置模板引擎(默认就是如下配置，可不填，代码可先ThymeleafProperties类)
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+# 开启图标
+spring.mvc.favicon.enabled=true
 # 配置日志级别
 
 # 注入properities的文件值
