--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.profiles.active=prod
 
 server.servlet.context-path=/helloworld
+server.jsp-servlet.init-parameters.develpoment=true
 # ssl…Ë÷√
 # server.ssl.key-store=.keystore
 # server.ssl.key-store-password=zpcwzy
