--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,17 @@
 # profile配置，针对不同的环境对不同的配置提供支持
 spring.profiles.active=prod
+# 配置数据源
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Mysql Connector/J 6.x以上的版本需设置serverTimezone
+spring.datasource.url=jdbc:mysql://localhost:3306/sampledb?charset=utf8mb4&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+# 根据实体类自动维护表结构
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+# 让控制器输出的json字符串格式更美观
+spring.jackson.serialization.indent-output=true
 
 server.servlet.context-path=/helloworld
 server.jsp-servlet.init-parameters.develpoment=true
