--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.jackson.serialization.indent-output=true
 
 server.servlet.context-path=/helloworld
 server.jsp-servlet.init-parameters.develpoment=true
+# 开启rest服务
+spring.data.rest.base-path=/api
+
 # ssl设置
 # server.ssl.key-store=.keystore
 # server.ssl.key-store-password=zpcwzy
@@ -25,9 +28,11 @@ http.port=8080
 #配置模板引擎(默认就是如下配置，可不填，代码可先ThymeleafProperties类)
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
 # 开启图标
 spring.mvc.favicon.enabled=true
-# 配置日志级别
+# 配置日志
+logging.level.org.springframework.security=info
 
 # 注入properities的文件值
 book.author=zhoumunang
