--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,10 @@ spring.thymeleaf.cache=false
 spring.mvc.favicon.enabled=true
 # 配置日志
 logging.level.org.springframework.security=info
+# 设置bean可重名
+spring.main.allow-bean-definition-overriding=true
+# 配置ActiveMQ消息代理的地址
+spring.activemq.broker-url=tcp://localhost:61616
 
 # 注入properities的文件值
 book.author=zhoumunang
